# local-code-bench

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LEADERBOARD.md  PROJECT-SEED.md  README.md  REQUIREMENTS.md  pyproject.toml  run-bench.sh  run-qwen-sequence.sh
.github/workflows/: lockfile.yml  release.yml
app/macos/: Package.swift  README.md  entitlements.plist
articles/: Headroom-prompt-processing-proxy-transcript.md  MTPLX-vs-oMLX-MTP-transcript.md
configs/: agents.yaml  build.yaml  comparisons.yaml  inferencers.yaml  models.yaml  optimizers.yaml  settings.yaml  suites.yaml
configs/datasets/: bugfix-py.jsonl  calc-cli.jsonl  jsondiff-cli.jsonl  logclass-cli.jsonl
docs/: EVALUATION-METHODOLOGY.md  FINDINGS.md  INFERENCER-INSTALLATION.md  MANUAL_TESTS.md  MODELS-TO-BENCHMARK.md  ROADMAP-INPUTS.md  SETTINGS.md  STORIES.md  UI-TOOLING-DECISION.md  dashboard.html
docs/article/: SERIES-PLAN.md  local-agentic-coding-part1.md
docs/references/: lukes-dev-lab-gemma4-12b-coder-transcript.en-orig.vtt
docs/stories/: .build-progress.md  epic-01-foundation-endpoint-protocol.md  (+18 more)
prompts/: task-a.md  task-b.md
scripts/: backfill-engine-provenance.py  bring-up-local.sh  build-macos-app.sh  build_bugfix_suite.py  build_calc_suite.py  build_jsondiff_suite.py  build_logclass_suite.py  distribute-macos-app.sh  run-local-sweeps.sh
tests/: test_ab_run.py  test_agents.py  test_autotier_config.py  test_benchmark_tier_resolve.py  test_bugfix_suite.py  test_build_app.py  test_calc_suite.py  test_chat.py  test_cli.py  test_cli_manage_inferencers.py  test_cli_optimizer.py  test_compare.py  test_compare_report.py  test_compare_verdicts.py  test_comparisons_config.py  test_config.py  test_custom_suites.py  test_dashboard.py  test_dashboard_charts.py  test_dashboard_lifecycle.py  test_dashboard_model.py  test_dashboard_server.py  test_distribute_app.py  test_endpoint_provenance.py  test_engine_backfill.py  test_engine_provenance.py  test_external_repo_config.py  test_inferencers_autotier.py  test_inferencers_config.py  test_inferencers_dashboard.py  test_inferencers_detect.py  test_inferencers_exclusive.py  test_inferencers_external.py  test_inferencers_inventory.py  test_inferencers_inventory_disk.py  test_inferencers_inventory_records.py  test_inferencers_inventory_sharing.py  test_inferencers_manager.py  test_inferencers_tiered.py  test_inferencers_tiering.py  (+38 more)
(+96 files in other folders)
