[project]
name = "local-code-bench"
version = "0.35.0"
description = "Benchmark harness for local, cloud, and agentic coding models on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
bench = "local_code_bench.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.12.0",
]

# NOTE: This is a minimal scaffold to anchor versioning + release automation.
# Story 01.1-001 (Epic-01) completes the full uv project scaffold, CLI entrypoint,
# and dev dependencies.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_code_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "--cov=local_code_bench --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["local_code_bench"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# Automated releases — python-semantic-release
# Triggered on push to main (.github/workflows/release.yml). Reads Conventional
# Commits since the last vX.Y.Z tag and bumps:
#   feat:            -> MINOR     fix:/perf:       -> PATCH
#   BREAKING CHANGE: -> MAJOR (but see major_on_zero below while pre-1.0)
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
# Pre-1.0: breaking changes bump the minor (0.1.0 -> 0.2.0), NOT 1.0.0.
# Flip to true (or cut v1.0.0 manually) when the MVP acceptance bar is met.
major_on_zero = false
allow_zero_version = true
# Keep uv.lock in the release commit after pyproject.toml version bumps.
# PSR's GitHub Action runs in its own container, so install uv inside that runtime.
build_command = "python -m pip install uv && uv lock"
assets = ["uv.lock"]
# Release commit is a valid conventional commit; [skip ci] avoids re-triggering.
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog]
mode = "update"
